Updated the form with a validation message.

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 
         <section>
             <h2>Result</h2>
-            <input type="text" id="Result" disabled />
+            <div id="Result"></div>
         </section>
     </div>
 </body>
